refactor(creditsEditor): expose AnyChangeListener and CREDITS_PATH publicly